# cex_board

./: .gitignore  Cargo.toml  README.md  config.example.toml  config.toml
src/: config.rs  constants.rs  main.rs  markets.rs  upbit_auth.rs  upbit_client.rs  upbit_model.rs  web.rs
src/exchanges/upbit/: client.rs  mod.rs  model.rs  websocket.rs
static/: index.html
