[package]
name = "cex_board"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.1.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.41", features = ["serde"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"